--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.3.3",
+    "axios": "^1.0.0",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,16 +25,20 @@
     "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "15.3.3",
     "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
+    "@nrwl/express": "15.6.1",
+    "@nrwl/jest": "15.6.1",
     "@nrwl/linter": "15.3.3",
+    "@nrwl/node": "15.6.1",
     "@nrwl/react": "15.3.3",
     "@nrwl/web": "15.3.3",
+    "@nrwl/webpack": "15.6.1",
     "@nrwl/workspace": "15.3.3",
     "@swc/core": "^1.2.173",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
+    "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
